--- a/documentation/bibliography.bib
+++ b/documentation/bibliography.bib
@@ -120,3 +120,10 @@ howpublished = {\url{https://cs.lmu.edu/~ray/notes/x86assembly/}},
 year={n.d.}
 }
 
+@misc{javacup,
+author="Scott Hudson",
+title="CUP - LALR parser generator for Java",
+howpublished = {\url{http://www2.cs.tum.edu/projects/cup/docs.php}},
+year={2014}
+}
+
